LK-21 : Refactor Controller tests